# RAG_Demo

./: .gitignore  README.md  chat.py  chat_window.py  pyproject.toml
data/: doc_map.json
data/05_tuning/: dspy_tuning.json
qdrant_data/: meta.json
qdrant_data/collection/papers/: storage.sqlite
rag_demo/: app.py  chat.py  index_test.py  ocr_test.py
rag_demo/scripts/: chat_args.py  chat_engine.py  index_data.py  load_pipeline.py  process_pdf.py  smoke_test.py  verify_index.py
rag_demo/tests/: ocr_test.py
src/: main.py  test.py  trainIndex.py  trainLM.py
src/embed/: embed.py
src/model/: RAG.py  instruct.py  retreive.py
src/parse/: parse.py
src/preprocess/: embed.py  parse.py  search.py
