[tool.poetry]
name = "localmodels"
version = "0.1.0"
description = ""
authors = ["Laurie Voss <github@seldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.9.19"
qdrant-client = "^1.7.0"
transformers = "^4.36.2"
torch = "^2.1.2"
flask = "^3.0.0"
flask-cors = "^4.0.0"
ocrmypdf = "^16.0.4"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
